[package]
name = "rust-zee"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.7.0"
rand = "0.8.4"
rocket = "0.5.0-rc.2"
serde_json = "1.0.87"
serde = "1.0.147"
chrono = "0.4.23"
image = "0.24.5"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
